
option(BUILD_MONTECARLO "Build Monte carlo simulaton method plugin?" OFF)
if(BUILD_MONTECARLO)
  add_library(monte-carlo-simulation MODULE simulate.cpp)
  target_link_libraries(monte-carlo-simulation ${REQLIBS})
endif(BUILD_MONTECARLO)

#find BOOST libraries
set(Boost_ADDITIONAL_VERSIONS "1.55.0" "1.56.0")
find_package(Boost COMPONENTS program_options REQUIRED)
link_directories(${BOOST_LIBRARY_DIRS})
include_directories(${BOOST_INCLUDE_DIR})

  add_executable(sample.bin Sample.cpp)

  target_link_libraries(sample.bin ${REQLIBS} boost_program_options MobyDriver)
  IF(USE_OSG_DISPLAY)
    #find OSG
    find_package (osg)
    find_package (osgViewer)
    find_package (osgDB)
    find_package (osgGA)
    find_package (osgFX)
    find_package (osgUtil)
    find_package (OpenThreads)
    link_directories(${OSG_LIBRARY_DIRS})
    include_directories(${OSG_INCLUDE_DIR})
    IF(OSG_FOUND)
      target_link_libraries (sample.bin ${OSG_LIBRARIES})
      target_link_libraries (sample.bin ${OSGVIEWER_LIBRARIES})
      target_link_libraries (sample.bin ${OSGDB_LIBRARIES})
      target_link_libraries (sample.bin ${OSGGA_LIBRARIES})
      target_link_libraries (sample.bin ${OPENTHREADS_LIBRARY})
      target_link_libraries (sample.bin ${OSGUTIL_LIBRARIES})
      target_link_libraries (sample.bin ${OSGMANIPULATOR_LIBRARIES})
      target_link_libraries (sample.bin OpenThreads)
      add_definitions (-DUSE_OSG_DISPLAY)
    ENDIF(OSG_FOUND)
  ENDIF(USE_OSG_DISPLAY)
