
if(${CMAKE_BUILD_TYPE})
  if(${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
    add_definitions(-DNO_GTEST)
    add_executable(PacerTest main.cpp)
    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest)
  else()
    add_executable(PacerTest main.cpp)
    target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
  endif()
else()
  add_executable(PacerTest main.cpp)
  target_link_libraries(PacerTest MobyDriver Moby Pacer gtest_main gtest)
endif()
