get_filename_component(TEST_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(TEST_BIN_NAME ${TEST_NAME}.test)

if(${CMAKE_BUILD_TYPE})
  if(${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
    add_definitions(-DNO_GTEST)
    add_executable(${TEST_BIN_NAME} main.cpp)
    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest)
  else()
    add_executable(${TEST_BIN_NAME} main.cpp)
    target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
  endif()
else()
  add_executable(${TEST_BIN_NAME} main.cpp)
  target_link_libraries(${TEST_BIN_NAME} MobyDriver Moby Pacer gtest_main gtest)
endif()

add_test(NAME ${TEST_BIN_NAME} COMMAND ${TEST_BIN_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_dependencies(unit-test ${TEST_BIN_NAME})
